--- a/src/index.html
+++ b/src/index.html
@@ -19,17 +19,17 @@
 <body>
 
   <div class="container-fluid">
-    <div class="titles-wrapper text-center mt-5 mb-3">
+    <div class="titles-wrapper text-center mt-5 mb-5">
       <h1 class="text-light"><strong>Tucu Weather app</strong></h1>
-      <h4 class="text-light">Get weather forecasts for over than 1,5M cities all aroud the world</h2>
+      <h4 class="text-light">Get weather forecasts for over than 250.000 cities all aroud the world</h2>
     </div>
     <form class="d-block">
-      <div class="mb-3 d-flex justify-content-around align-items-center">
+      <div class="mb-3 mt-5 d-flex justify-content-around align-items-center">
         <input type="text" class="form-control w-50" id="citySearchBox" placeholder='City name' aria-describedby="searchHelp">
         <button type="submit" id="searchCity" class="btn btn-primary border-light w-25 ms-3">Submit</button>
       </div>
       <div class="info-wrapper justify-content-start">
-        <div id="searchHelp" class="form-text text-info">You must at least use 3 characters</div>
+        <div id="searchHelp" class="form-text text-info">At least 3 letters are needed</div>
       </div>
     </form>
   </div>
